# virtual-data-catalog

./: .gitignore  API_USAGE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  test.json
.github/workflows/: deploy-docs-on-demand.yml  docker-image.yml
docs/: index.md
vdc_api/: main.py
vdc_api/resources/: ontop_configuration.py
vdc_api/tools/S3/: ontop_inputs.py
vdc_api/tools/mapping/: mapping_generation.py
vdc_api/tools/ontop/data/csv/: books.csv
vdc_api/tools/ontop/data/relational/: library.sql
vdc_api/tools/ontop/dremio/: core-site.xml  dremio.conf
vdc_api/tools/ontop/input/: mapping.ttl  mappingCSV.ttl  mappings.ttl  ontology.ttl  ontop.properties
vdc_api/tools/ontop/scripts/: dremio-init.sh  dremio_setup.py
