[project]
name = "vdc-api"
version = "0.0.1"
description = "Virtual Data Catalog (WP5)"
authors = [{ name = "Zoe Chevallier", email = "zoe.chevallier@univr.it" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
dependencies = [
    "docker>=7.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.27.0",
    "PyLD>=2.0.4",
    "python-dotenv>=1.0.1",
    "rdflib>=7.0.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = ["vdc_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
